# jupyter-ai-agent

./: .gitignore  .licenserc.yaml  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: build.yml
docs/: Makefile  README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/: _category_.yaml  index.mdx
docs/docs/agents/: _category_.yaml  index.mdx
docs/docs/agents/explain_error/: index.mdx
docs/docs/agents/explain_error_agent/: index.mdx
docs/docs/agents/prompt/: index.mdx
docs/docs/agents/prompt_agent/: index.mdx
docs/docs/deployments/: index.mdx
docs/docs/deployments/in-kernel/: index.mdx
docs/docs/deployments/out-kernel-stateful/: index.mdx
docs/docs/deployments/out-kernel-stateless/: index.mdx
docs/docs/install/: _category_.yaml  index.mdx
docs/docs/interactions/: _category_.yaml  index.mdx
docs/docs/interactions/ask/: _category_.yaml  index.mdx
docs/docs/interactions/listen/: _category_.yaml  index.mdx
docs/docs/models/: index.mdx
docs/docs/models/azure/: index.mdx
docs/docs/setup/: example_1.md  example_2.md  index.mdx
docs/docs/tools/: index.mdx
docs/docs/usage/: index.mdx
docs/docs/usage/ask/: index.mdx
docs/docs/usage/listen/: index.mdx
docs/docs/use-cases/: index.mdx
docs/src/components/: HomepageProducts.js
docs/src/css/: custom.css
jupyter_ai_agent/: __version__.py  agent.py  app.py  base.py  consoleapp.py  tools.py  utils.py
jupyter_ai_agent/agents/: explain_error.py  prompt.py
jupyter_ai_agent/providers/: azure_openai.py  openai.py
